--- a/src/illustrator/web/templates/style_config.html
+++ b/src/illustrator/web/templates/style_config.html
@@ -41,6 +41,8 @@
                                     <option value="dalle">DALL-E</option>
                                     <option value="imagen4">Imagen 4</option>
                                     <option value="flux">Flux</option>
+                                    <option value="flux_dev_vertex">Flux Dev (Vertex AI)</option>
+                                    <option value="flux_schnell_vertex">Flux Schnell (Vertex AI)</option>
                                     <option value="huggingface">HuggingFace Endpoint</option>
                                     <option value="replicate">Replicate</option>
                                 </select>
