--- a/src/illustrator/web/templates/base.html
+++ b/src/illustrator/web/templates/base.html
@@ -235,6 +235,18 @@
                             </div>
                             <div class="row g-3 mt-1">
                                 <div class="col-md-6">
+                                    <label for="fluxDevVertexEndpointUrl" class="form-label">Flux Dev Vertex Endpoint URL</label>
+                                    <input type="text" class="form-control" id="fluxDevVertexEndpointUrl" placeholder="https://vertex.googleapis.com/v1/projects/.../endpoints/.../predict">
+                                    <div class="form-text">Google Vertex AI endpoint for Flux Dev model.</div>
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="fluxSchnellVertexEndpointUrl" class="form-label">Flux Schnell Vertex Endpoint URL</label>
+                                    <input type="text" class="form-control" id="fluxSchnellVertexEndpointUrl" placeholder="https://vertex.googleapis.com/v1/projects/.../endpoints/.../predict">
+                                    <div class="form-text">Google Vertex AI endpoint for Flux Schnell model.</div>
+                                </div>
+                            </div>
+                            <div class="row g-3 mt-1">
+                                <div class="col-md-6">
                                     <label for="googleCredentials" class="form-label">Google Cloud Credentials Path</label>
                                     <input type="text" class="form-control" id="googleCredentials" placeholder="/path/to/credentials.json">
                                     <div class="form-text">Used for Imagen 4 via Vertex AI.</div>
