--- a/src/illustrator/web/templates/manuscript_detail.html
+++ b/src/illustrator/web/templates/manuscript_detail.html
@@ -37,7 +37,7 @@
                                 <li><a class="dropdown-item" href="#" onclick="exportManuscript()">
                                     <i class="bi bi-download me-2"></i>Export
                                 </a></li>
-                                <li><a class="dropdown-item text-muted" href="#" id="resetImagesBtn" aria-disabled="true" tabindex="-1" data-images-count="0" data-enabled="false">
+                                <li><a class="dropdown-item text-muted" href="#" id="resetImagesBtn" tabindex="-1" data-images-count="0" data-enabled="false">
                                     <i class="bi bi-arrow-counterclockwise me-2"></i>Reset Illustrations
                                 </a></li>
                                 <li><hr class="dropdown-divider"></li>
